# nflreceivingsim

./: .gitignore  .replit  app.py  betting_tools.py  calculations.py  data_processing.py  optimize_decay.py  pyproject.toml  replit.nix  requirements.txt  simulation.py
templates/: index.html  results.html
